--- a/email.html
+++ b/email.html
@@ -293,7 +293,7 @@
             </td>
           </tr>
         </table>
-        <div class="footer">
+        <!-- <div class="footer">
           <table role="presentation" border="0" cellpadding="0" cellspacing="0">
             <tr>
               <td class="content-block powered-by">
@@ -301,7 +301,7 @@
               </td>
             </tr>
           </table>
-        </div>
+        </div> -->
       </div>
     </td>
     <td>&nbsp;</td>
